objects/DSE_Log__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <description>Used to count lines in reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EncryptedToken__c</fullName>
        <label>EncryptedToken</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>User__r.FirstName&amp;" "&amp;User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_ID__c</fullName>
        <label>OE_ID</label>
        <length>13100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <formula>TEXT(User__r.Theatre__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>User__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DSE_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actiontype__c</fullName>
        <label>actiontype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apiobject__c</fullName>
        <label>apiobject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calltype__c</fullName>
        <label>calltype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filter_criteria__c</fullName>
        <label>filter_criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>filter_type__c</fullName>
        <description>filter_type field for tac/order api</description>
        <label>filter_type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>locale__c</fullName>
        <label>locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>page_no__c</fullName>
        <label>page_no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>page_size__c</fullName>
        <label>page_size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>party_id__c</fullName>
        <label>party_id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sort_by__c</fullName>
        <label>sort_by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sort_order__c</fullName>
        <label>sort_order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>time_zone__c</fullName>
        <label>time_zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalnumberofrecords__c</fullName>
        <label>totalnumberofrecords</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Digital Selling Exp logs</description>
    <label>DSE Log</label>
    <nameField>
        <label>DSE_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSE_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>